--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce</title>
+    <title>Hasko's House</title>
     <!--font awsome-->
-
+    <script
+      src="https://kit.fontawesome.com/369280da46.js"
+      crossorigin="anonymous"
+    ></script>
     <!--custom css-->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!--navbar-->
+    <nav class="navbar">
+      <div class="navbar-center"></div>
+      <span class="nav-icon">
+        <i class="fas fa-bars"></i>
+      </span>
+      <img src="./images/logo.svg" alt="store logo" />
+      <div class="cart-btn">
+        <span class="nav-icon">
+          <i class="fas fa-cart-plus"></i>
+        </span>
+        <div class="cart-items">0</div>
+      </div>
+    </nav>
+    <!--end of navbar-->
     <script src="app.js"></script>
   </body>
 </html>
