--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <h2>our products</h2>
       </div>
       <div class="products-center">
-        <!--single product-->
-        <article class="product">
+        <!-- single product-->
+        <!-- <article class="product">
           <div class="img-container">
             <img
               src="./images/product-1.jpeg"
@@ -60,8 +60,8 @@
           </div>
           <h3>queen bed</h3>
           <h4>$16</h4>
-        </article>
-        <!--end of single product-->
+        </article> -->
+        <!--end of single product -->
       </div>
     </section>
     <!--end of products-->
