--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <header class="hero">
       <div class="banner">
         <h1 class="banner-title">furniture collection</h1>
-        <button class="banner-btn">shop now</button>
+        <button class="banner-btn"><a href="#products">shop now</a></button>
       </div>
     </header>
     <!--end of hero-->
     <!--products-->
-    <section class="products">
+    <section class="products" id="products">
       <div class="section-title">
         <h2>our products</h2>
       </div>
