--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="hero">
       <div class="banner">
         <h1 class="banner-title">furniture collection</h1>
-        <button class="banner-btn"><a href="#products">shop now</a></button>
+        <a href="#products"><button class="banner-btn">shop now</button></a>
       </div>
     </header>
     <!--end of hero-->
